--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -1,20 +1,36 @@
-.Logo {
-    width: 10%;
-    height: 17%;
-    text-align: center;
+* {
+    box-sizing: border-box;
+    margin:0;
+    padding:0;
+    font-family: 'Montserrat', sans-serif;
 }
 
-.background {
-    background: #f0f0f0;
-    width:100%;
-    height:100vh;
+.intro1 {
+    margin-top: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height:70px;
 }
 
-.banner {
-    height:35vh;
-    background-image: url('../assets//images/banner2.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    opacity: 0.6;
+.intro2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height:60px;
+}
+
+.Buttons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 80px;
+    margin-top: 60px;
+}
+
+.Form {
+    margin-top: 30px;
+    display:flex;
+    align-items: center;
+    justify-content: center;
 }
