--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -4,6 +4,15 @@
     display:flex;
     /*justify-content: center;*/
     align-items: center;
+    justify-content: space-between;
     font-size: 1.2rem;
     
+}
+
+.alignRight {
+    margin-right: 20px;
+}
+
+.NavbarAdmin {
+    margin-left: 20px;
 }
