--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -9,6 +9,17 @@
     
 }
 
+.ADNavbarItems {
+    background: linear-gradient(90deg, rgb(116, 128, 173) 0%, rgb(81, 59, 192) 100%);
+    height:80px;
+    display:flex;
+    /*justify-content: center;*/
+    align-items: center;
+    justify-content: space-between;
+    font-size: 1.2rem;
+    
+}
+
 .alignRight {
     margin-right: 20px;
 }
